<resources>
    <string name="app_name">OSMexample</string>
    <string name="CancelButtonText">Отмена</string>
    <string name="SaveButtonText">Сохранить</string>
    <string name="DescriptionButtonText">Введите описание метки</string>
    <string name="DescriptionLabelText">Описание метки</string>
    <string name="MarkerTypeCheckboxText">Тип метки</string>
    <string name="EditMarkerNameText">Введите имя метки</string>
    <string name="MarkerNameLabelText">Имя метки</string>
    <string name="AddNewMarkerTitleText">Создать метку</string>
    <string name="MarkerInfoMarkerNameText">Имя метки</string>
    <string name="MarkerInfoChangeButtonText">Изменить</string>
    <string name="MarkerInfoDeleteButtonText">Удалить</string>
    <string name="LoadingScreenText">Загрузка...</string>
    <string name="topPanelListMarkersText">Мои метки</string>
    <string name="notMarkersListMarkersText">Пока что у вас нет меток</string>
    <string name="confirmationText">Вы точно хотите удалить метку?</string>
    <string name="cancelButtonText">Отмена</string>
    <string name="confirmButtonText">Подтвердить</string>
    <string name="displayLayoutText">Отобразить метки</string>
    <string name="trackOrRouteLayoutText">Что вы хотите сделать с выбранным объектом?</string>
    <string name="doTrackOrRouteButtonText">Изменить</string>
    <string name="deleteTrackOrRouteButtonText">Удалить</string>
    <string name="mushroomHuntingText">Грибная охота - это маленькая жизнь</string>
    <string name="anglerText">Время, проведенное на рыбалке, в счет жизни не идет!</string>
    <string name="registrationButtonText">Регистрация</string>
    <string name="loginButtonText">Войти</string>
    <string name="haveAccountText">Уже есть аккаунт</string>
    <string name="createAccountButtonText">Зарегистрироваться</string>
    <string name="inputNewEmail">Введите почту</string>
    <string name="inputNewNameText">Введите имя</string>
    <string name="createAccountText">Регистрация</string>
    <string name="inputNewPassword">Введите пароль</string>
    <string name="createNewAccountButtonText">Создать аккаунт</string>
    <string name="forgotPasswordButtonText">Забыл пароль</string>
    <string name="authorizationButtonText">Войти</string>
    <string name="inputPasswordText">Введите пароль</string>
    <string name="inputEmailAddressText">Введите почту</string>
    <string name="authorizationText">Вход</string>
    <string name="rememberCheckBoxText">Запомни меня</string>
    <string name="passwordRecoveryText">Восстановление пароля</string>
    <string name="newPasswordText">Чтобы восстановить пароль, введите адрес вашей электронной почты</string>
    <string name="getNewPasswordButtonText">Получить новый пароль</string>
</resources>