<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/loadingScreenLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/forest_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="100dp"
            android:text="@string/LoadingScreenText"
            android:textSize="32sp"
            android:textStyle="bold" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/markerInfoPanel"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:translationX="65dp"
        android:translationY="90dp"
        android:translationZ="2dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/markerName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:minHeight="48dp"
                android:text="@string/MarkerInfoMarkerNameText"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/closeMarkerInfoButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:onClick="onCloseMarkerInfoButtonClicked"
                android:src="@drawable/close"
                app:srcCompat="@drawable/close" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/markerDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:minHeight="48dp" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="onChangeMarkerButtonClicked"
                android:text="@string/MarkerInfoChangeButtonText" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_weight="1"
                android:onClick="onDeleteMarkerButtonClicked"
                android:text="@string/MarkerInfoDeleteButtonText" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF8E1"
        android:padding="16dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFE082"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/listText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="30dp"
                android:text="@string/topPanelListMarkersText"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/listCloseButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:layout_marginStart="100dp"
                android:alpha="0.7"
                android:onClick="onListMarkersButtonClick"
                android:src="@drawable/close" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="120dp" />

        <TextView
            android:id="@+id/emptyListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notMarkersListMarkersText"
            android:textSize="20sp"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/mapMenuButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:onClick="onMenuButtonClick"
            android:src="@drawable/menu"
            android:translationZ="2dp" />

        <ListView
            android:id="@+id/menu"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:background="#FFF8E1"
            android:translationZ="2dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/myLocationButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.7"
            android:background="@color/white"
            android:onClick="onMapCenterButtonClick"
            android:src="@drawable/my_location"
            android:translationX="340dp"
            android:translationY="70dp"
            android:translationZ="2dp" />

        <ImageView
            android:id="@+id/plusZoomButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.6"
            android:background="@color/white"
            android:onClick="onPlusZoomButtonClick"
            android:src="@drawable/plus"
            android:translationX="340dp"
            android:translationY="300dp"
            android:translationZ="2dp" />

        <ImageView
            android:id="@+id/minusZoomButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.6"
            android:background="@color/white"
            android:onClick="onMinusZoomButtonClick"
            android:src="@drawable/minus"
            android:translationX="340dp"
            android:translationY="370dp"
            android:translationZ="2dp" />

        <ImageView
            android:id="@+id/centerMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onCenterMarkerClick"
            android:scaleX="0.05"
            android:scaleY="0.05"
            android:src="@drawable/default_marker"
            android:translationY="-29px"
            android:translationZ="1dp"
            android:visibility="invisible" />

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.yandex.mapkit.mapview.MapView>

        <LinearLayout
            android:id="@+id/createOrChangeLayout"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="16dp"
            android:translationZ="3dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/createOrChangeTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/AddNewMarkerTitleText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createOrChangeNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MarkerNameLabelText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/createOrChangeInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/EditMarkerNameText"
                android:inputType="text" />

            <TextView
                android:id="@+id/createOrChangeDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DescriptionLabelText"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/createOrChangeInputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DescriptionButtonText"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/MarkerTypeCheckboxText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/fish_marker" />

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/mushroom_marker" />

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/walk_marker" />

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/default_marker" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/objectType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fishRadioButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/button_bg" />

                <RadioButton
                    android:id="@+id/mushroomRadioButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/button_bg" />

                <RadioButton
                    android:id="@+id/walkRadioButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/button_bg" />

                <RadioButton
                    android:id="@+id/defaultRadioButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/button_bg" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSaveOrChange"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#FFD54F"
                    android:onClick="onSaveOrChangeButton"
                    android:text="@string/SaveButtonText"
                    android:textColor="#000000"
                    app:strokeColor="#FF6F00"
                    app:strokeWidth="3dp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#FFD54F"
                    android:onClick="onCancelMarkerButton"
                    android:text="@string/CancelButtonText"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:strokeColor="#FF6F00"
                    app:strokeWidth="3dp" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>